# csv_stacker

./: Cargo.toml  Config.toml  README.md  colnames.txt  stacked.csv
csvs/: bar.csv  foo.csv
src/: config.rs  lib.rs  main.rs
