[package]
name = "csv_stacker"
version = "0.1.1"
edition = "2021"
description = "A simple utility to vertically stack CSV files with partially matching column headers."
license = "MIT"
repository = "https://github.com/justinluther502/csv_stacker"

[dependencies]
polars = { version = "0.25.1", features = ["lazy"] }
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
